--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,18 @@
-name: Release Binaries
+name: Build
 
 on:
-  release:
-    types:
-      - published
+  workflow_call:
+    inputs:
+      branch:
+        description: 'Branch name (optional)'
+        required: false
+        type: string
+    secrets:
+      GH_TOKEN:
+        required: true
 
 jobs:
-  build:
+  build-binaries:
     name: Build Binaries
     runs-on: ubuntu-latest
 
@@ -41,27 +47,3 @@ jobs:
         run: |
           mkdir -p build
           GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o build/smp-srv-${{ matrix.arch }}${{ matrix.ext }} ./cmd/srv/
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: smp-srv-${{ matrix.os }}-${{ matrix.arch }}
-          path: build/smp-srv-${{ matrix.arch }}${{ matrix.ext }}
-
-  release:
-    name: Attach Binaries to GitHub Release
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: build
-
-      - name: Attach binaries to release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: build/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
